# lux-marl

./: README.md  main.py  pyproject.toml
configs/: default.yaml
configs/logger/: basic.yaml
src/lux_marl/: __init__.py  env.py  loggers.py  obs.py  obs2.py  observation.py  utils.py  wrappers.py
src/lux_marl/dqn/: train_jax.py  train_torch.py
