[project]
name = "lux-marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ivar Gaitan", email = "ivar.gaitan@embark-studios.com" }
]
requires-python = ">=3.11"
dependencies = [
    "gymnasium==0.29.1",
    "luxai-s3",
]

[tool.uv.sources]
luxai-s3 = { path = "../Lux-Design-S3/src", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

